# bneqpri

./: .flake8  .gitignore  Cargo.toml  README.md  Untitled.ipynb  costs.csv  examples.sh  firms.csv  fppep.py  justfile  prices.csv  pyproject.toml  setup.py  utilities.csv
bneqpri/: __init__.py  __main__.py  cli.py  config.py  impl.py  io.py  logging.py  samplers.py  solver.py  types.py  utilities.py
bneqpri/solver/: __init__.py  v1.py  v2.py
example/: firms.csv  large-firms.csv  large-products.csv  large-utilities.csv  products.csv  utilities.csv
examples/budgets/1000-10-148/: firms.csv  prices.csv  products.csv  utilities.csv
examples/budgets/1000-5-68/: firms.csv  prices.csv  products.csv  utilities.csv
examples/budgets/50-3-41/: firms.csv  prices.csv  products.csv  utilities.csv
examples/budgets/500-3-44/: firms.csv  prices.csv  products.csv  utilities.csv
examples/linear/1000-10-144/: firms.csv  prices.csv  products.csv  utilities.csv
examples/linear/1000-5-79/: firms.csv  prices.csv  products.csv  utilities.csv
examples/linear/50-3-53/: firms.csv  prices.csv  products.csv  utilities.csv
examples/linear/500-3-40/: firms.csv  prices.csv  products.csv  utilities.csv
src/: firm.rs  lib.rs  linalg.rs  ndsolve.rs.notrs  options.rs  solve.rs  stats.rs  utility.rs
test/solver/: test_solver.py
test/unit/: test_samplers.py  test_utility.py
test/unit/samplers/: test_samplers.py
